Stor omskriving: Alle tester bruker Familie og Søker objekt for ... (#579)
* Stor omskriving. Alle tester brukes felles Familie objeket for instansiering at testpersoner, innsedning av søknad, oppbygging og innsending av inntektsmelding.

* Dokumentgenrator 3.0.1